--- a/style.css
+++ b/style.css
@@ -44,15 +44,114 @@ h1{
     
 }
 
-.image-width {
+.img1 {
     width:40%;
-    float: right;
     margin-left: 15%;
     padding-left: 2%;
 }
 
-#pic1{
+/* #pic1{
     height: 100%;
     width: 100%;
+} */
+.famous-chefs{
+    background-image: url("images/shapes/Frame 57.jpg");
+    background-size: cover;
+    background-position: left;
+    display: flex ;
+    flex-direction: row;
+    width: 100%;
 }
+
+.img2{
+    width:40%;
+}
+
+#pic2 {
+    /* margin-top: */
+    width:80%;
+    height:80%;
+    margin-top: 8rem;
+}
+
+/* .all{
+    position: left;
+    margin-top: 15px;
+    
+    display: flex;
+    float: left;
+    
+    width: 70%;
+    height: 80%;
+
+} */
+
+.chef{
+    width:40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+
+}
+
+.contact-button{
+    text-decoration: none;
+    background: linear-gradient(45deg, tomato,orange);
+    padding: 15px 50px;
+    color:snow;
+    font-weight: 600;
+    border-radius: 35px;
+    margin-bottom: 20px;
+    display: inline-block;
+
+}
+.style{
+    text-align: center;
+}
+.recipe-area{
+    display: flex;
+    margin-left: 3rem;
+    position: relative;
+}
+.recipes{
+    text-align: center;
+    border: transparent;
+    
+}
+.thai-soup{
+    box-shadow: 5px 7px 40px gray;
+    height: 20%;
+    width: 30%;
+    border-radius: 40px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    color: black;
+
+}
+.img3{
+    width: 22.9rem;
+    height: 20rem;
+    margin-left: 35px;
+    margin-top: 30px;
+    border-radius: 35px;
+    
+}
+.soup{
+    margin-left: 3%;
+    margin-right: 5%;
+    margin-bottom: 2%;
+    text-align: justify;
+}
+
+footer{
+    background-color: rgb(6, 2, 19);
+    color: cornsilk;
+    text-align: center;
+    padding: 70px;
+    margin-top: 20px;
+    font-size: 20px;
+}
+
+
 
