--- a/style.css
+++ b/style.css
@@ -152,6 +152,29 @@ footer{
     margin-top: 20px;
     font-size: 20px;
 }
+.bonus{
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+    box-shadow: 5px 7px 40px blueviolet;
+    
+}
+
+  
+  
+  #submit{
+    text-decoration: none;
+    background: linear-gradient(45deg, tomato,orange);
+    padding: 15px 50px;
+    color:snow;
+    font-weight: 600;
+    border-radius: 35px;
+    margin-bottom: 20px;
+    display: inline-block;
 
 
 
+  }
+  
+  
+  
