--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0px;
+    background-color: rgb(255, 255, 255);
     
     
 }
@@ -71,7 +72,9 @@ h1{
     /* margin-top: */
     width:80%;
     height:80%;
-    margin-top: 8rem;
+    margin-top: 10px;
+    margin-bottom: 6rem;
+    margin-left: 30px;
 }
 
 /* .all{
@@ -126,7 +129,8 @@ h1{
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 30px;
-    color: black;
+    color: rgb(3, 3, 58);
+    background-color: rgb(255, 255, 255);
 
 }
 .img3{
@@ -157,6 +161,7 @@ footer{
     margin-left: 30%;
     margin-right: 30%;
     box-shadow: 5px 7px 40px blueviolet;
+    background-color: rgb(224, 231, 247);
     
 }
 
