--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ h1{
 
 .img1 {
     width:40%;
-    margin-left: 15%;
-    padding-left: 2%;
+    margin-right: 5%;
+    margin-top: 7%;
+    padding-left: 5%;
 }
 
 /* #pic1{
@@ -122,7 +123,7 @@ h1{
     
 }
 .thai-soup{
-    box-shadow: 5px 7px 40px gray;
+    box-shadow: 5px 7px 20px gray;
     height: 20%;
     width: 30%;
     border-radius: 40px;
